--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.15",
+    "materialize-css": "^0.97.6",
     "systemjs": "0.19.26",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.2",
@@ -17,10 +18,10 @@
     "zone.js": "0.6.10"
   },
   "devDependencies": {
-    "jspm": "^0.16.31",
     "concurrently": "^2.0.0",
+    "jspm": "^0.16.31",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings":"^0.7.12"
+    "typings": "^0.7.12"
   }
 }
