--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "jspm": {},
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" \"npm run sass-css\" ",
     "lite": "lite-server",
     "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "typings": "typings"
+    "typings": "typings",
+    "sass-css": "sass --watch css:css"
   },
   "dependencies": {
     "angular2": "2.0.0-beta.15",
@@ -21,6 +22,8 @@
     "concurrently": "^2.0.0",
     "jspm": "^0.16.31",
     "lite-server": "^2.2.0",
+    "node-sass": "^3.5.3",
+    "node-sass-import": "^1.0.0",
     "typescript": "^1.8.10",
     "typings": "^0.7.12"
   }
