spring version upgrade

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.3.3.RELEASE'
+		springBootVersion = '1.3.5.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -35,7 +35,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-social-facebook')
 	compile('org.springframework.boot:spring-boot-starter-web')
   compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
-  compile ('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
+  compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
+  compile('io.springfox:springfox-swagger2:2.2.2')
+  compile('io.springfox:springfox-swagger-ui:2.2.2')
+
   testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
