--- a/package.json
+++ b/package.json
@@ -1,42 +1,71 @@
 {
   "jspm": {
     "registry": "npm",
+    "directories": {
+      "baseURL": "app/src"
+    },
     "dependencies": {
-      "angular2": "^2.0.0-beta.17",
+      "angular2": "2.0.0-beta.1",
+      "crypto": "github:jspm/nodelibs-crypto@^0.1.0",
+//      "diffie-hellman": "^5.0.2",
+//      "elliptic": "^6.2.3",
       "es6-shim": "^0.35.0",
       "jquery": "^2.2.3",
       "materialize-css": "^0.97.6",
-      "reflect-metadata": "0.1.2",
-      "rxjs": "5.0.0-beta.6",
-      "zone.js": "0.6.12"
+//      "parse-asn1": "^5.0.0",
+      "reflect-metadata": "^0.1.3",
+      "zone.js": "^0.6.12"
     },
     "devDependencies": {
-      "typescript": "^1.6.2"
+      "babel": "babel-core@^5.8.24",
+      "babel-runtime": "^5.8.24",
+      "core-js": "^1.1.4"
     }
   },
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" \"npm run sass-css\" ",
-    "lite": "lite-server",
-    "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
+    "start": "gulp",
+    "postinstall": "typings install && jspm install",
     "sass-css": "sass --watch css:css"
   },
-  "dependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "es6-shim": "^0.35.0",
-    "jquery": "^2.2.3",
-    "materialize-css": "^0.97.6",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
-  },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "browser-sync": "^2.12.5",
+    "connect-history-api-fallback": "^1.2.0",
+    "del": "^2.2.0",
+    "es6-module-loader": "^0.17.11",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-copy": "latest",
+    "gulp-css-url-adjuster": "^0.2.3",
+    "gulp-insert": "^0.5.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-ng-html2js": "^0.2.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-protractor": "^2.3.0",
+    "gulp-replace-task": "^0.11.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-tap": "latest",
+    "gulp-tsd": "0.1.0",
+    "gulp-tslint": "4.3.3",
+    "gulp-typescript": "^2",
+    "gulp-uglify": "^1.5.3",
+    "isparta": "^4.0.0",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.1.0",
     "jspm": "^0.16.34",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.7.12"
+    "lodash": "latest",
+    "ng-annotate": "^1.2.1",
+    "object.assign": "^4.0.3",
+    "require-dir": "^0.3.0",
+    "rsvp": "^3.2.1",
+    "run-sequence": "^1.1.5",
+    "systemjs": "^0.19.27",
+    "systemjs-route-bundler": "^1.6.0",
+    "tslint": "latest",
+    "typescript": "1.8.9",
+    "vinyl-paths": "^2.1.0"
   }
 }
