--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": true,
+    "suppressImplicitAnyIndexErrors": true
   },
   "exclude": [
     "node_modules",
-    "jspm_packages",
     "typings/main",
-    "typings/main.d.ts"
+    "typings/main.d.ts",
+    "app/src/jspm_packages"
   ]
 }
