--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "dependencies": {
       "angular2": "2.0.0-beta.1",
       "crypto": "github:jspm/nodelibs-crypto@^0.1.0",
-//      "diffie-hellman": "^5.0.2",
-//      "elliptic": "^6.2.3",
-      "es6-shim": "^0.35.0",
+      "es6-shim": "0.33.13",
       "jquery": "^2.2.3",
       "materialize-css": "^0.97.6",
-//      "parse-asn1": "^5.0.0",
-      "reflect-metadata": "^0.1.3",
-      "zone.js": "^0.6.12"
+      "reflect-metadata": "0.1.2",
+      "zone.js": "0.5.10"
     },
     "devDependencies": {
       "babel": "babel-core@^5.8.24",
@@ -28,8 +25,6 @@
     "sass-css": "sass --watch css:css"
   },
   "devDependencies": {
-    "browser-sync": "^2.12.5",
-    "connect-history-api-fallback": "^1.2.0",
     "del": "^2.2.0",
     "es6-module-loader": "^0.17.11",
     "gulp": "^3.9.1",
@@ -43,22 +38,15 @@
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-html2js": "^0.2.2",
     "gulp-plumber": "^1.1.0",
-    "gulp-protractor": "^2.3.0",
-    "gulp-replace-task": "^0.11.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-tap": "latest",
     "gulp-tsd": "0.1.0",
     "gulp-tslint": "4.3.3",
     "gulp-typescript": "^2",
-    "gulp-uglify": "^1.5.3",
-    "isparta": "^4.0.0",
-    "jshint": "^2.9.2",
-    "jshint-stylish": "^2.1.0",
     "jspm": "^0.16.34",
     "lodash": "latest",
     "ng-annotate": "^1.2.1",
-    "object.assign": "^4.0.3",
     "require-dir": "^0.3.0",
     "rsvp": "^3.2.1",
     "run-sequence": "^1.1.5",
