--- a/package.json
+++ b/package.json
@@ -1,59 +1,47 @@
 {
-  "jspm": {
-    "registry": "npm",
-    "directories": {
-      "baseURL": "app/src"
-    },
-    "dependencies": {
-      "angular2": "2.0.0-beta.1",
-      "crypto": "github:jspm/nodelibs-crypto@^0.1.0",
-      "es6-shim": "0.33.13",
-      "jquery": "^2.2.3",
-      "materialize-css": "^0.97.6",
-      "reflect-metadata": "0.1.2",
-      "zone.js": "0.5.10"
-    },
-    "devDependencies": {
-      "babel": "babel-core@^5.8.24",
-      "babel-runtime": "^5.8.24",
-      "core-js": "^1.1.4"
-    }
-  },
+  "name": "tcrs",
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-    "start": "gulp",
-    "postinstall": "typings install && jspm install",
-    "sass-css": "sass --watch css:css"
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "@angular2-material/core": "^2.0.0-alpha.8-2",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "del": "^2.2.0",
-    "es6-module-loader": "^0.17.11",
-    "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-copy": "latest",
-    "gulp-css-url-adjuster": "^0.2.3",
-    "gulp-insert": "^0.5.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-minify-html": "^1.0.6",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-ng-html2js": "^0.2.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-tap": "latest",
-    "gulp-tsd": "0.1.0",
-    "gulp-tslint": "4.3.3",
-    "gulp-typescript": "^2",
-    "jspm": "^0.16.34",
-    "lodash": "latest",
-    "ng-annotate": "^1.2.1",
-    "require-dir": "^0.3.0",
-    "rsvp": "^3.2.1",
-    "run-sequence": "^1.1.5",
-    "systemjs": "^0.19.27",
-    "systemjs-route-bundler": "^1.6.0",
-    "tslint": "latest",
-    "typescript": "1.8.9",
-    "vinyl-paths": "^2.1.0"
+    "@types/jasmine": "^2.2.30",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.19-3",
+    "codelyzer": "1.0.0-beta.1",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "~2.0.3",
+    "webdriver-manager": "10.2.5"
   }
 }
