--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~2.4.9",
     "@angular/router": "~3.4.9",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "lodash": "latest",
     "moment": "latest",
     "rxjs": "5.0.1",
