--- a/package.json
+++ b/package.json
@@ -13,28 +13,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.9",
-    "@angular/compiler": "~2.4.9",
-    "@angular/core": "~2.4.9",
-    "@angular/flex-layout": "^2.0.0-rc.1",
-    "@angular/forms": "~2.4.9",
-    "@angular/http": "~2.4.9",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "~2.4.9",
-    "@angular/platform-browser-dynamic": "~2.4.9",
-    "@angular/router": "~3.4.9",
+    "@angular/animations": "^4.0.2",
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/flex-layout": "^2.0.0-beta.7",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
+    "@angular/material": "^2.0.0-beta.3",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/router": "^4.0.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "latest",
     "moment": "latest",
     "rxjs": "5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.1",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
-    "@types/lodash": "latest",
+    "@types/lodash": "4.14.50",
     "@types/node": "^6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "2.5.2",
@@ -48,6 +50,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
-    "typescript": "~2.0.0"
+    "typescript": "~2.1.4"
   }
 }
