--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.2.RELEASE'
+		springBootVersion = '1.5.3.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -10,10 +10,15 @@ buildscript {
 	}
 }
 
+plugins {
+  id "org.sonarqube" version "2.2"
+}
+
 apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'org.sonarqube'
 apply plugin: 'spring-boot'
 
 jar {
