--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'jacoco'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.sonarqube'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 jar {
 	baseName = 'tcrs'
@@ -38,6 +38,7 @@ dependencies {
   compile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
   compile 'io.springfox:springfox-swagger2:2.2.2'
   compile 'io.springfox:springfox-swagger-ui:2.2.2'
+  compile 'org.modelmapper:modelmapper:0.7.5'
   compile 'org.springframework.boot:spring-boot-devtools'
 	compile 'org.springframework.boot:spring-boot-starter-cache'
 	compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -51,13 +52,6 @@ dependencies {
   testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
-
-eclipse {
-	classpath {
-		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-	}
-}
 
 idea {
   module {
