--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
 language: java
 jdk:
   - oraclejdk8
+
+addons:
+  sonarqube:
+    organization: rainerhahnekamp-github
+    token:
+      secure: 4e891e5de78c822bce4d9c2da399fcb017183316
+
+script:
+  - ./gradlew sonarqube
+
