added cache to travis for faster ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,9 @@ addons:
 script:
   - ./gradlew sonarqube
 
+cache:
+  directories:
+    - '$HOME/.m2/repository'
+    - '$HOME/.sonar/cache'
+    - '$HOME/.gradle'
+    - '.gradle'
