--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@angular/common": "^4.0.2",
     "@angular/compiler": "^4.0.2",
     "@angular/core": "^4.0.2",
-    "@angular/flex-layout": "^2.0.0-beta.7",
+    "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.2",
     "@angular/http": "^4.0.2",
-    "@angular/material": "^2.0.0-beta.3",
+    "@angular/material": "^2.0.0-beta.6",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/router": "^4.0.3",
@@ -28,7 +28,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.0.0",
     "hammerjs": "^2.0.8",
-    "lodash": "latest",
+    "lodash": "4.14.2",
     "moment": "latest",
     "rxjs": "5.1.0",
     "ts-helpers": "^1.1.1",
@@ -38,7 +38,7 @@
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
-    "@types/lodash": "4.14.50",
+    "@types/lodash": "4.14.64",
     "@types/node": "^6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "2.5.2",
@@ -52,6 +52,6 @@
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
-    "typescript": "~2.1.4"
+    "typescript": "~2.3.3"
   }
 }
