--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,21 @@ addons:
       secure: 4e891e5de78c822bce4d9c2da399fcb017183316
 
 before_script:
-  - npm install -g angular-cli@1.0.0
+  - nvm install -g @angular/cli@1.0.0
 
 script:
   - ./gradlew sonarqube
   - ng lint
+
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.sonar/cache'
     - '$HOME/.gradle'
-    - '.gradle'
     - 'node_modules'
   yarn: true
