switched from nvm to npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
       secure: 4e891e5de78c822bce4d9c2da399fcb017183316
 
 before_script:
-  - nvm install -g @angular/cli@1.0.0
+  - npm install -g @angular/cli@1.0.0
 
 script:
   - ./gradlew sonarqube
