added gradlew check

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - npm install -g @angular/cli@1.0.0
 
 script:
-  - java -version
+  - ./gradlew check
   - ./gradlew sonarqube
   - ng lint
 
