added JAVA_HOME for debug purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,21 @@
 language: node_js
 
 addons:
+  apt:
+    packages:
+      - oracle-java8-set-default
   sonarqube:
     organization: rainerhahnekamp-github
     token:
       secure: 4e891e5de78c822bce4d9c2da399fcb017183316
-  apt:
-    packages:
-      - oracle-java8-set-default
 
 before_script:
+  - echo $JAVA_HOME
   - npm install -g @angular/cli@1.0.0
+  - ./gradlew assemble
 
 script:
   - ./gradlew check
-  - ./gradlew sonarqube
   - ng lint
 
 
