installation of jdk as script

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: node_js
 
 addons:
-  apt:
-    packages:
-      - oracle-java8-set-default
   sonarqube:
     organization: rainerhahnekamp-github
     token:
       secure: 4e891e5de78c822bce4d9c2da399fcb017183316
 
 before_script:
+  - apt install oracle-java8-set-default
   - echo $JAVA_HOME
   - npm install -g @angular/cli@1.0.0
   - ./gradlew assemble
