--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
       secure: 4e891e5de78c822bce4d9c2da399fcb017183316
 
 before_script:
-  - apt install oracle-java8-set-default
+  - apt-get install oracle-java8-set-default
   - echo $JAVA_HOME
   - npm install -g @angular/cli@1.0.0
   - ./gradlew assemble
