--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "4.14.2",
     "moment": "latest",
+    "ng2-mdf-validation-messages": "^0.1.5",
     "rxjs": "5.1.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.5"
