--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -104,3 +104,8 @@ sonarqube {
     property 'sonar.exclusions', fetchIgnoreInTestCoverageFiles([/@IgnoreInTestCoverage/, /@Data/])
   }
 }
+
+checkstyle {
+  toolVersion = "7.8.2"
+  ignoreFailures = false
+}
