--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -62,6 +62,7 @@ dependencies {
   compile 'org.springframework.boot:spring-boot-devtools'
   compile 'org.springframework.boot:spring-boot-starter-cache'
   compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
+  compile 'org.springframework.boot:spring-boot-starter-mail'
   compile 'org.springframework.boot:spring-boot-starter-security'
   compile 'org.springframework.boot:spring-boot-starter-web'
 //  compile 'org.springframework.session:spring-session'
