--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
+    "test-sr": "ng test -sr",
     "ci": "ng lint && ng test -sr",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "pre-commit": [
-    "ci"
-  ],
+  "pre-commit": ["lint"],
+  "pre-push": ["test -sr"],
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.2",
@@ -56,6 +56,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "pre-commit": "^1.2.2",
+    "pre-push": "^0.1.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
