--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,6 +1,6 @@
 import java.util.regex.Pattern
 import java.util.stream.Collectors
-cz.habarta.typescript.generator.StringQuotes
+import cz.habarta.typescript.generator.StringQuotes
 
 buildscript {
   ext {
