--- a/build.gradle
+++ b/build.gradle
@@ -2,3 +2,12 @@ task wrapper(type: Wrapper) {
   gradleVersion = '4.0.1'
 }
 
+sonarqube {
+  properties {
+    property 'sonar.projectKey', 'com.hatorach.tcrs'
+    property 'sonar.projectName', 'TCRS'
+    property 'sonar.exclusions', fetchIgnoreInTestCoverageFiles([/@IgnoreInTestCoverage/, /@Data/])
+  }
+}
+
+
