--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,6 +16,9 @@ buildscript {
   }
 }
 
+plugins {
+  id "org.sonarqube" version "2.5"
+}
 
 apply plugin: 'checkstyle'
 apply plugin: 'cz.habarta.typescript-generator'
@@ -23,6 +26,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'org.sonarqube'
 
 jar {
   baseName = 'tcrs'
@@ -91,6 +95,14 @@ def fetchIgnoreInTestCoverageFiles = { List<Pattern> ignoreInTestCoverageFlags -
     .filter(containsFlag)
     .map({it.getAbsolutePath().substring(lengthCwd + 1)})
     .collect(Collectors.toList())
+}
+
+sonarqube {
+  properties {
+    property 'sonar.projectKey', 'com.hatorach.tcrs'
+    property 'sonar.projectName', 'TCRS'
+    property 'sonar.exclusions', fetchIgnoreInTestCoverageFiles([/@IgnoreInTestCoverage/, /@Data/])
+  }
 }
 
 checkstyle {
