--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -22,8 +22,8 @@ plugins {
 
 apply plugin: 'checkstyle'
 apply plugin: 'cz.habarta.typescript-generator'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'jacoco'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'org.sonarqube'
