--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.0.2",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.0.2",
     "@angular/compiler": "^4.0.2",
     "@angular/core": "^4.0.2",
     "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.2",
     "@angular/http": "^4.0.2",
-    "@angular/material": "^2.0.0-beta.6",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/router": "^4.0.3",
