--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,10 @@ logging:
   level:
     org.springframework.security: DEBUG
 
+lombok:
+  log:
+    fieldIsStatic: false
+
 mail:
   smtpServer: localhost
   login: none
