Reservation access hash and test

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -60,6 +60,7 @@ configurations {
   compile.exclude module: 'spring-boot-starter-logging'
 }
 dependencies {
+  compile 'commons-codec:commons-codec'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
   compile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
   compile 'io.springfox:springfox-swagger2:2.2.2'
