--- a/build.gradle
+++ b/build.gradle
@@ -2,3 +2,9 @@ task wrapper(type: Wrapper) {
   gradleVersion = '4.0.1'
 }
 
+task installGitHooks(type: Copy) {
+  from new File(rootProject.rootDir, 'pre-commit-gradle')
+  into { new File(rootProject.rootDir, '.git/hooks') }
+}
+tasks.installGitHooks.execute()
+
