--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "postinstall": "npm rebuild node-sass",
-    "gradlecheck": "gradlew check",
+    "gradlecheck": "./gradlew check",
     "test": "ng test",
     "test-sr": "ng test --browsers PhantomJS -sr",
     "ci": "ng lint && ng test --browsers PhantomJS -sr",
