--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -60,15 +60,16 @@ configurations {
   compile.exclude module: 'spring-boot-starter-logging'
 }
 dependencies {
-  compile 'commons-codec:commons-codec'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-  compile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
-  compile 'io.springfox:springfox-swagger2:2.2.2'
-  compile 'io.springfox:springfox-swagger-ui:2.2.2'
+  compile 'io.springfox:springfox-swagger2:2.7.0'
+  compile 'io.springfox:springfox-swagger-ui:2.7.0'
+  compile 'mysql:mysql-connector-java:5.1.6'
+  compile 'org.apache.commons:commons-lang3:3.6'
+  compile 'org.apache.commons:commons-text:1.1'
   compile 'org.modelmapper:modelmapper:0.7.5'
   compile 'org.springframework.boot:spring-boot-devtools'
   compile 'org.springframework.boot:spring-boot-starter-cache'
-  compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
+  compile 'org.springframework.boot:spring-boot-starter-data-jpa'
   compile 'org.springframework.boot:spring-boot-starter-log4j2'
   compile 'org.springframework.boot:spring-boot-starter-mail'
   compile 'org.springframework.boot:spring-boot-starter-security'
