--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ addons:
 before_install:
   - sudo apt-get install oracle-java8-set-default
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+  - 'curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.0.0' #travis issue 7566
+  - export PATH="$HOME/.yarn/bin:$PATH" # travis issue 7566
 
 before_script:
   - echo $JAVA_HOME
