--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "pre-push": "^0.1.1"
   },
   "pre-commit": [
-    "lint",
-    "gradlecheck"
+    "lint"
   ],
   "pre-push": [
     "test-sr"
