--- a/package.json
+++ b/package.json
@@ -5,48 +5,49 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "npm rebuild node-sass",
-    "gradlecheck": "./gradlew check",
+    "backendcheck": "./mvnw checkstyle:check",
     "test-sr": "ng test --browsers PhantomJS -sr",
     "ci": "ng lint && ng test --browsers PhantomJS -sr",
     "merge-packages": "package-json-merge package.ng.json package.tcrs.json > package.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "@ngrx/store": "^4.1.0",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.2",
     "zone.js": "^0.8.14",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/flex-layout": "^2.0.0-beta.8",
-    "@angular/material": "^2.0.0-beta.8",
-    "angularfire2": "^4.0.0-rc.0",
-    "firebase": "^4.0.0",
+    "@angular/cdk": "5.0.1",
+    "@angular/flex-layout": "2.0.0-beta.12",
+    "@angular/material": "5.0.1",
+    "@angular/material-moment-adapter": "5.0.1",
+    "@ngrx/store": "^4.1.1",
+    "angularfire2": "5.0.0-rc.4",
+    "firebase": "^4.8.0",
     "hammerjs": "^2.0.8",
-    "lodash": "4.14.2",
-    "moment": "latest"
+    "lodash": "4.17.4",
+    "moment": "2.19.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular/cli": "1.6.1",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
+    "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -57,16 +58,17 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "@types/lodash": "4.14.64",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2",
+    "@types/lodash": "4.14.91",
     "karma-phantomjs-launcher": "^1.0.4",
     "package-json-merge": "^0.0.1",
     "pre-commit": "^1.2.2",
     "pre-push": "^0.1.1"
   },
   "pre-commit": [
-    "lint"
+    "lint",
+    "backendcheck"
   ],
   "pre-push": [
     "test-sr"
