--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build --prod",
-    "test": "ng test",
+    "test": "npx ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "npm rebuild node-sass",
