--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
       secure: 4e891e5de78c822bce4d9c2da399fcb017183316
 
 before_install:
-  - docker run -it -u `id -u $USER` --rm -v $PWD:/app -w /app node:8.9.3 yarn --cache-folder /app/.yarn-cache
+  - docker run -it --rm -v $PWD:/app -w /app node:8.9.3 yarn --cache-folder /app/.yarn-cache
   - docker run -it -u `id -u $USER` --rm -v $PWD:/app -w /app node:8.9.3 npm run ci
   - sudo apt-get install oracle-java8-set-default
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
