--- a/.travis.yml
+++ b/.travis.yml
@@ -13,26 +13,15 @@ addons:
 before_install:
   - docker run -it --rm -v $PWD:/app -w /app node:8.9.3 yarn --cache-folder /app/.yarn-cache
   - docker run -it -u `id -u $USER` --rm -v $PWD:/app -w /app node:8.9.3 npm run ci
-  - sudo apt-get install oracle-java8-set-default
-  - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
-
-before_script:
-  - echo $JAVA_HOME
-  - ./gradlew assemble
 
 script:
-  - ./gradlew check
-  - ./gradlew sonarqube
+  - echo $JAVA_HOME
+  - ./mvnw verify
 
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.sonar/cache'
-    - '$HOME/.gradle'
     - '.yarn-cache'
     - 'node_modules'
