--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -19,6 +19,11 @@
     <relativePath>../../</relativePath>
   </parent>
 
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
   <dependencies>
 
     <dependency>
@@ -26,16 +31,17 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
     </dependency>
 
+
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>${springfox-swagger2.version}</version>
+      <version>2.7.0</version>
     </dependency>
 
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>${springfox-swagger-ui.version}</version>
+      <version>2.7.0</version>
     </dependency>
 
     <!--<dependency>-->
