moved git hooks to push stage

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-sr": "ng test --browsers PhantomJS -sr",
     "ci": "ng lint && ng test --browsers PhantomJS -sr",
     "merge-packages": "package-json-merge package.ng.json package.tcrs.json > package.json",
-    "yarn": "docker run -u `id -u $USER` --rm -v $PWD:/app -w /app node:8.9.3 yarn --cache-folder /app/.yarn-cache"
+    "yarn": "docker run -u `id -u $USER` -it --rm -v $PWD:/app -w /app node:8.9.3 yarn --cache-folder /app/.yarn-cache"
   },
   "private": true,
   "dependencies": {
@@ -64,14 +64,11 @@
     "@types/lodash": "4.14.91",
     "karma-phantomjs-launcher": "^1.0.4",
     "package-json-merge": "^0.0.1",
-    "pre-commit": "^1.2.2",
     "pre-push": "^0.1.1"
   },
-  "pre-commit": [
-    "lint",
-    "backendcheck"
-  ],
   "pre-push": [
+    "lint",
+    "backendcheck",
     "test-sr"
   ]
 }
