--- a/modules/app/pom.xml
+++ b/modules/app/pom.xml
@@ -27,10 +27,15 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.hatorach.tcrs</groupId>
+      <artifactId>endpoint</artifactId>
+      <version>0.0.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
     </dependency>
-
 
     <dependency>
       <groupId>io.springfox</groupId>
@@ -119,7 +124,6 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <build>
