--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "test": "npx ng test --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "npm rebuild node-sass",
-    "backendcheck": "mvnw checkstyle:check",
-    "test-sr": "ng test --browsers PhantomJS -sr",
+    "backendcheck": "./mvnw checkstyle:check",
     "ci": "ng lint && ng test --browsers PhantomJS -sr",
     "merge-packages": "package-json-merge package.ng.json package.tcrs.json > package.json",
+    "postinstall": "npm rebuild node-sass",
+    "prepush": "npm-run-all lint backendcheck test-sr",
+    "test-sr": "ng test --browsers PhantomJS -sr",
     "yarn": "docker run -u `id -u $USER` -it --rm -v $PWD:/app -w /app node:8.9.3 yarn --cache-folder /app/.yarn-cache"
   },
   "private": true,
@@ -62,13 +63,9 @@
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
     "@types/lodash": "4.14.91",
+    "husky": "0.14.3",
     "karma-phantomjs-launcher": "^1.0.4",
-    "package-json-merge": "^0.0.1",
-    "pre-push": "^0.1.1"
-  },
-  "pre-push": [
-    "lint",
-    "backendcheck",
-    "test-sr"
-  ]
+    "npm-run-all": "^4.1.2",
+    "package-json-merge": "^0.0.1"
+  }
 }
